--- a/WebContent/style/style.css
+++ b/WebContent/style/style.css
@@ -1,1 +1,91 @@
-/* Add styles for application here */
+    body {
+    height: 100%;
+    width: 100%;
+    }
+	header {
+    background-color:#4a5b91;
+    color:white;
+    height:80px;
+    }
+	div {
+    height:770px;
+    }
+    footer {
+    background-color:#adb3af;
+    height:40px;
+    }
+    img {
+    height:60px;
+    width:60px;
+    margin-left: 10px;
+    }
+    #movies {
+	float:right;
+    margin-right: 40px;
+    margin-top: 30px;
+    color: white;
+    }              
+    #head {
+    margin-left: 20px;
+    font-size: 40px;
+    }
+    .cont {
+    margin-left: 80px;
+    margin-top: 50px;
+    text-align: justify;
+    width: 40%;
+	}
+    .button {
+     background-color: #4a5b91;
+     border: none;
+     color: white;
+     padding: 15px 32px;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-size: 16px;
+     margin: 4px 2px;
+     cursor: pointer;
+    }
+    .full {
+     width:85%;
+    }
+    #margin {
+    margin-left: 50px;
+    }
+    p {
+    margin-left: 50px;
+    color: green;
+    font-size: 18px;
+    }
+    #center {
+    text-align: center;
+    }
+    #left {
+    text-align: left;
+    }
+    #Favorites {
+	float:right;
+    margin-right: 40px;
+    margin-top: 30px;
+    color: white;
+    }              
+    .al-right {
+	text-align: right;
+	}
+    .al-mid {
+	text-align: center;
+    }
+    .al-left {
+	text-align: left;
+	width:px;
+    }
+	.link-color {
+	color: black;	
+	}
+    #text {
+	color: grey;
+    }
+    #view {
+		color: black;
+	}
